funcionando para ambas colecciones
